--- a/moderate-comet-chat/src/main/webapp/templates-hidden/default.html
+++ b/moderate-comet-chat/src/main/webapp/templates-hidden/default.html
@@ -1,13 +1,23 @@
-<html xmlns="http://www.w3.org/1999/xhtml"   
-    xmlns:lift="http://liftweb.net/"> 
-  <head> 
-    <title>Real-Time Chat</title> 
-    <lift:CSS.blueprint /> 
-    <lift:CSS.fancyType /> 
-    <script id="jq" src="/classpath/jquery.js" type="text/javascript"/> 
-    <script id="json" src="/classpath/json.js" type="text/javascript"/> 
-  </head> 
-  <body> 
-    <lift:bind name="content" /> 
-  </body> 
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" xmlns:lift="http://liftweb.net/">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="MSSmartTagsPreventParsing" content="true" />
+    <meta name="author" content="Tim Perrett" />
+    <link href="css/default.css" rel="stylesheet" type="text/css" />
+    <link href="css/chat.css" rel="stylesheet" type="text/css" />
+    <!--[if IE]><link rel="stylesheet" href="css/iefix.css" type="text/css" media="screen, projection"><![endif]-->
+    <script id="jquery" src="/classpath/jquery.js" type="text/javascript"></script>
+    <script id="json" src="/classpath/json.js" type="text/javascript"></script>
+    <title>Lift Web Framework: Moderate Chat Example</title>
+  </head>
+  <body>
+    <div id="wrapper">
+      <div id="main">
+        <div id="content">
+          <lift:bind name="content" />
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
+
